General + fix: finished 'About Me' page, fixed the footer issue on mobile

--- a/docs/general-styles.css
+++ b/docs/general-styles.css
@@ -82,9 +82,7 @@ footer {
 	display: block;
 	margin-bottom: 1rem;
 
-	position: absolute;
-	bottom: 0;
- 	left: 0;
+	position: initial;
 
 	font-size: 0.8rem;
 	text-align: center;
@@ -118,9 +116,9 @@ nav > p > label {
 	display: flex;
 	width: 100%;
 	text-align: right;
-	-webkit-user-select: none;  
-	-moz-user-select: none;    
-	-ms-user-select: none;      
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
 	user-select: none;
 }
 
@@ -150,7 +148,7 @@ ul.sl-item-list {
 
 ul.sl-item-list > li {
 	padding: 0.2rem 0.5rem;
-	border: 0.5px solid var(--faded-black);
+	border: 2px solid var(--faded-black);
 }
 
 ul.sl-item-list > li:not(:first-child) {
@@ -209,6 +207,12 @@ input:checked ~ #inner-body nav > p > label::before {
 
 	nav > p > label::before {
 		flex: 4;
+	}
+
+	footer {
+		position: absolute;
+		bottom: 0;
+		left: 0;
 	}
 
 	input:checked ~ #inner-body nav > p > label::before {
